<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/judulwarung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Warung makan Gacor"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menumakanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/judulwarung"
        android:layout_marginTop="15dp"
        android:text="@string/menu_makanan" />

    <RadioGroup
        android:id="@+id/Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/menumakanan">

        <RadioButton
            android:id="@+id/nasigoreng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nasi_goreng" />

        <RadioButton
            android:id="@+id/miegoreng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mie_goreng" />

        <RadioButton
            android:id="@+id/mierebus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mie_rebus" />

        <RadioButton
            android:id="@+id/nasiuduk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nasi_uduk" />

    </RadioGroup>

    <TextView
        android:id="@+id/menuminuman"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Menu"
        android:layout_marginTop="15dp"
        android:text="@string/menu_makanan" />

    <RadioGroup
        android:id="@+id/Menu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/menuminuman">

        <RadioButton
            android:id="@+id/tehes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teh_es" />

        <RadioButton
            android:id="@+id/esjeruk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/es_jeruk" />

    </RadioGroup>

    <TextView
        android:id="@+id/jumlahporsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Menu2"
        android:layout_marginTop="15dp"
        android:text="@string/jumlah_porsi" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/jumlahporsi_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/jumlahporsi"
        android:hint="@string/jumlah_porsi_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/jumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/jumlahporsi_layout"
        android:layout_marginTop="20dp"
        android:text="@string/pesan" />


</RelativeLayout>